Resolve issue where popups get stuck
Slightly better state tracking of drop downs, and only opening them if
they weren’t already opened.

related to issue #10

--- a/_harp/assets/css/_components/_sextant.scss
+++ b/_harp/assets/css/_components/_sextant.scss
@@ -36,7 +36,7 @@
 
 .toc { 
   font-size: $font-size-s; 
-  margin-top: $font-size-xs; // little more space b/w banner or top of page
+  margin-top: $font-size-xxs; // little more space b/w banner or top of page
 }
 
 .toc .item {
