--- a/_harp/assets/css/enhanced.css
+++ b/_harp/assets/css/enhanced.css
@@ -672,7 +672,7 @@
 
 .toc {
   font-size: 13px;
-  margin-top: 11px; }
+  margin-top: 8px; }
 
 .toc .item {
   border-left: 8px solid #ccc; }
